第一次提交

--- a/fanqu/src/main/res/layout/coupon_centre_list_item_layout.xml
+++ b/fanqu/src/main/res/layout/coupon_centre_list_item_layout.xml
@@ -1,115 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coupon_centre_root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="@dimen/dimen_40px"
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_380px"
         android:layout_marginLeft="@dimen/dimen_40px"
         android:layout_marginRight="@dimen/dimen_40px"
-        android:background="@color/white"
+        android:background="@drawable/fragment_person_mine_dinner_select"
+        android:clickable="true"
         android:orientation="horizontal">
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/head_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_toLeftOf="@+id/coupon_layout"
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/coupon_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:layout_marginLeft="@dimen/dimen_40px"
-                android:layout_marginRight="@dimen/dimen_40px"
-                android:layout_weight="0"
-                android:gravity="left"
-                android:text="全品类（特价商品除外)"
-                android:textColor="@color/color_353535"
-                android:textSize="@dimen/dimen_43px" />
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dimen_40px"
-                android:layout_marginRight="@dimen/dimen_40px"
-                android:gravity="left|bottom"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/coupon_title"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="￥"
-                    android:textColor="@color/color_F35757"
-                    android:textSize="@dimen/dimen_64px" />
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginLeft="@dimen/dimen_40px"
+                    android:layout_marginRight="@dimen/dimen_40px"
+                    android:layout_weight="0"
+                    android:gravity="left"
+                    android:text="全品类（特价商品除外)"
+                    android:textColor="@color/color_353535"
+                    android:textSize="@dimen/dimen_43px" />
 
-                <TextView
-                    android:id="@+id/coupon_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10"
-                    android:textColor="@color/color_F35757"
-                    android:textSize="@dimen/dimen_148px" />
-
-                <TextView
-                    android:id="@+id/coupon_service_conditions"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/dimen_40px"
-                    android:text="无金额门槛"
-                    android:textColor="@color/color_F35757"
-                    android:textSize="@dimen/dimen_40px" />
+                    android:layout_marginRight="@dimen/dimen_40px"
+                    android:gravity="left|bottom"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/coupon_money_unit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="￥"
+                        android:textColor="@color/color_F35757"
+                        android:textSize="@dimen/dimen_64px" />
+
+                    <TextView
+                        android:id="@+id/coupon_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:textColor="@color/color_F35757"
+                        android:textSize="@dimen/dimen_148px" />
+
+                    <TextView
+                        android:id="@+id/coupon_service_conditions"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/dimen_40px"
+                        android:text="无金额门槛"
+                        android:textColor="@color/color_F35757"
+                        android:textSize="@dimen/dimen_40px" />
+
+                </LinearLayout>
             </LinearLayout>
-
-        </LinearLayout>
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/coupon_layout"
             android:layout_width="@dimen/dimen_400px"
             android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:layout_weight="0"
-            android:background="@color/color_FF7676"
+            android:background="@color/color_F35757"
             android:orientation="vertical">
-            <com.fanqu.main.widget.CircleProgressBar
-                android:id="@+id/circle_progress_bar_4"
-                android:layout_width="@dimen/dimen_100px"
+
+            <LinearLayout
+                android:id="@+id/coupon_centre_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_centerInParent="true"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                android:layout_height="@dimen/dimen_100px"
-                app:circle_color="#000"
-                app:circle_width="2dp"
-                app:progress_color1="#f00"
-                app:progress_width="2dp"
-                app:start_arc="0"
 
-                />
-                />
-                <!--app:circle_color="#0f0"-->
-                <!--app:circle_width="@dimen/dimen_20px"-->
-                <!--app:progress_color1="#FFFF00"-->
-                <!--app:progress_color2="#008000"-->
-                <!--app:progress_color3="#FFA500"-->
-                <!--app:progress_width="@dimen/dimen_20px"-->
-                <!--app:start_arc="135"-->
-                <!--app:max_progress="100"-->
-                <!--app:current_progress="100"-->
-                <!--app:is_set_top_title="false"-->
-                <!--app:top_title="您的等级超越全国"-->
-                <!--app:top_title_text_size="10sp"-->
-                <!--app:top_title_color="#000"-->
-                <!--app:is_set_mid_content="true"-->
-                <!--app:mid_progress_color="#f00"-->
-                <!--app:is_set_bottom_content="true"-->
-                <!--app:bottom_content="万的用户"-->
-                <!--app:bottom_content_text_size="10sp"/>-->
+                <com.fanqu.main.widget.CircleProgressBar
+                    android:id="@+id/coupon_get_amount"
+                    android:layout_width="@dimen/dimen_210px"
+                    android:layout_height="@dimen/dimen_210px"
+                    android:layout_marginBottom="@dimen/dimen_10px"
+                    android:visibility="gone"
+                    app:max="100"
+                    app:progress="70"
+                    app:progressBarAlpha="1"
+                    app:progressBarBackgroundAlpha="1"
+                    app:progressBarBackgroundColor="@color/red_bg"
+                    app:progressBarColor="@color/white"
+                    app:startAngle="145"
+
+                    app:textSize="@dimen/dimen_40px" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/coupon_centre_has_get"
+                    android:layout_width="@dimen/dimen_220px"
+                    android:layout_height="@dimen/dimen_220px"
+                    android:layout_marginBottom="@dimen/dimen_10px"
+                    android:contentDescription="已经领取"
+                    android:src="@mipmap/ic_has_get" />
+
+                <TextView
+                    android:id="@+id/coupon_centre_immediately_get"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_10px"
+                    android:background="@drawable/coupon_centre_immediately_get_select"
+                    android:clickable="true"
+                    android:paddingBottom="@dimen/dimen_10px"
+                    android:paddingLeft="@dimen/dimen_20px"
+                    android:paddingRight="@dimen/dimen_20px"
+                    android:paddingTop="@dimen/dimen_10px"
+                    android:text="立即领取"
+                    android:textColor="@color/color_F35757"
+                    android:textSize="@dimen/dimen_40px" />
+            </LinearLayout>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/coupon_centre_over"
+                android:layout_width="@dimen/dimen_220px"
+                android:layout_height="@dimen/dimen_220px"
+                android:layout_centerInParent="true"
+                android:contentDescription="已经抢光了"
+                android:src="@mipmap/ic_has_over" />
         </RelativeLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
