--- a/fanqu/src/main/res/values/attrs.xml
+++ b/fanqu/src/main/res/values/attrs.xml
@@ -53,8 +53,8 @@
         <attr name="editable" format="boolean" />
         <attr name="buttonWidth" format="dimension" />
         <attr name="textWidth" format="dimension" />
-        <attr name="textSize" format="dimension" />
-        <attr name="textColor" format="color" />
+        <attr name="textColor"  />
+        <attr name="textSize"  />
     </declare-styleable>
 
     <declare-styleable name="PileLayout">
@@ -152,10 +152,10 @@
     </declare-styleable>
 
     <declare-styleable name="CircleImageView">
-        <attr name="civ_border_width" format="dimension"/>
-        <attr name="civ_border_color" format="color"/>
-        <attr name="civ_border_overlay" format="boolean"/>
-        <attr name="civ_fill_color" format="color"/>
+        <attr name="civ_border_width" format="dimension" />
+        <attr name="civ_border_color" format="color" />
+        <attr name="civ_border_overlay" format="boolean" />
+        <attr name="civ_fill_color" format="color" />
     </declare-styleable>
 
     <attr name="visible_tab_count" format="integer" />
@@ -165,12 +165,12 @@
     </declare-styleable>
 
     <declare-styleable name="SmoothCheckBox">
-        <attr name="duration" format="integer"/>
-        <attr name="stroke_width" format="dimension"/>
-        <attr name="color_tick" format="color"/>
-        <attr name="color_checked" format="color"/>
-        <attr name="color_unchecked" format="color"/>
-        <attr name="color_unchecked_stroke" format="color"/>
+        <attr name="duration" format="integer" />
+        <attr name="stroke_width" format="dimension" />
+        <attr name="color_tick" format="color" />
+        <attr name="color_checked" format="color" />
+        <attr name="color_unchecked" format="color" />
+        <attr name="color_unchecked_stroke" format="color" />
     </declare-styleable>
 
     <declare-styleable name="PayEditPassword">
@@ -181,46 +181,28 @@
         <attr name="VerifyCodeTextColor" format="color" />
         <attr name="VerifyCodeLength" format="integer" />
     </declare-styleable>
+    <attr name="direction" format="enum">
+        <enum name="left" value="-1" />
+        <enum name="right" value="1" />
+    </attr>
 
     <declare-styleable name="CircleProgressBar">
-        <!-- 设置圆环进度条的圆环背景属性，包括颜色与宽度 -->
-        <attr name="circle_color" format="color"/>
-        <attr name="circle_width" format="dimension"/>
-
-        <!-- 设置圆环进度条的进度条属性，包括颜色与宽度，颜色可以设置3种从而实现一个渐变的效果 -->
-        <attr name="progress_color1" format="color"/>
-        <attr name="progress_color2" format="color"/>
-        <attr name="progress_color3" format="color"/>
-        <attr name="progress_width" format="dimension"/>
-
-
-        <!-- 设置圆环进度条百分比是从低到高显示还是从高到低显示 ，默认从低到高，即从0到100 -->
-        <attr name="set_high_to_low" format="boolean"/>
-
-        <!-- 是否设置圆环进度条中间的内容属性，需要与下面的一组属性配合使用-->
-        <attr name="is_set_top_title" format="boolean"/>
-        <attr name="is_set_mid_content" format="boolean"/>
-        <attr name="is_set_bottom_content" format="boolean"/>
-
-        <!-- 设置圆环进度条中间的内容属性-->
-        <attr name="top_title" format="string"/>
-        <attr name="bottom_content" format="string"/>
-        <attr name="current_progress" format="float"/>
-        <attr name="max_progress" format="float"/>
-
-        <attr name="top_title_color" format="color"/>
-        <attr name="mid_progress_color" format="color"/>
-        <attr name="bottom_content_color" format="color"/>
-        <attr name="top_title_text_size" format="dimension"/>
-        <attr name="bottom_content_text_size" format="dimension"/>
-        <attr name="current_progress_text_size" format="dimension"/>
-
-
-        <!-- 设置显示圆环的弧度，360度则显示整个圆环-->
-        <attr name="sweep_angle" format="integer"/>
-        <attr name="start_arc" format="float"/>
-        <attr name="end_arc" format="float"/>
-
-
+        <attr name="min" format="integer" />
+        <attr name="max" format="integer" />
+        <attr name="progress" format="integer" />
+        <attr name="progressBarColor" format="color|reference" />
+        <attr name="progressBarAlpha" format="float|reference" />
+        <attr name="progressBarThickness" format="dimension|reference" />
+        <attr name="progressBarBackgroundColor" format="color|reference" />
+        <attr name="progressBarBackgroundAlpha" format="float|reference" />
+        <attr name="progressBarBackgroundThickness" format="dimension|reference" />
+        <attr name="text" format="string|reference" />
+        <attr name="direction" />
+        <attr name="startAngle" format="integer" />
+        <attr name="textColor" />
+        <attr name="textSize" />
     </declare-styleable>
+
+    <attr name="textColor" format="color|reference" />
+    <attr name="textSize" format="dimension|reference" />
 </resources>
