--- a/fanqu/src/main/res/layout/fragment_person_layout.xml
+++ b/fanqu/src/main/res/layout/fragment_person_layout.xml
@@ -165,6 +165,8 @@
                 android:id="@+id/fragment_person_mine_property"
                 android:layout_width="match_parent"
                 android:layout_height="0px"
+                android:layout_marginBottom="@dimen/dimen_10px"
+                android:layout_marginTop="@dimen/dimen_10px"
                 android:layout_weight="1"
                 android:background="@drawable/fragment_person_mine_dinner_select"
                 android:clickable="true"
@@ -373,6 +375,7 @@
                 android:layout_marginLeft="@dimen/dimen_40px"
                 android:layout_marginRight="@dimen/dimen_40px"
                 android:layout_marginTop="@dimen/dimen_10px"
+                android:layout_marginBottom="@dimen/dimen_10px"
                 android:layout_weight="1"
                 android:background="@drawable/fragment_person_mine_dinner_select"
                 android:clickable="true"
