--- a/fanqu/src/main/res/values/colors.xml
+++ b/fanqu/src/main/res/values/colors.xml
@@ -89,6 +89,7 @@
     <color name="color_000000">#000000</color>
     <color name="color_353535">#353535</color>
     <color name="color_F35757">#F35757</color>
+    <color name="color_DBDBDB">#DBDBDB</color>
 
 
 </resources>
