--- a/fanqu/src/main/res/layout/fragment_like_layout.xml
+++ b/fanqu/src/main/res/layout/fragment_like_layout.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fanqu.like.fragment.LikeFragment">
+    android:background="@color/fragment_person_bg">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/like_dinner_party_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:overScrollMode="never"
+        android:scrollbars="none" />
 </FrameLayout>
