--- a/fanqu/src/main/res/values/dimens.xml
+++ b/fanqu/src/main/res/values/dimens.xml
@@ -185,5 +185,8 @@
     <dimen name="dimen_734px">734px</dimen>
     <dimen name="dimen_2650px">265px</dimen>
     <dimen name="dimen_720px">720px</dimen>
+    <dimen name="dimen_1670px">1670px</dimen>
+    <dimen name="dimen_375px">375px</dimen>
+    <dimen name="dimen_205px">205px</dimen>
 
 </resources>
