--- a/fanqu/src/main/res/layout/memu_a_list_item_layout.xml
+++ b/fanqu/src/main/res/layout/memu_a_list_item_layout.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="@dimen/dimen_10px">
 
     <RelativeLayout
         android:layout_width="@dimen/dimen_800px"
-        android:layout_height="@dimen/dimen_80px"
+        android:layout_height="@dimen/dimen_65px"
         android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/dimen_15px"
-        android:layout_marginTop="@dimen/dimen_15px"
+        android:layout_marginBottom="@dimen/dimen_10px"
+        android:layout_marginTop="@dimen/dimen_10px"
         android:gravity="center_horizontal">
 
         <TextView
