--- a/fanqu/src/main/res/values/dimens.xml
+++ b/fanqu/src/main/res/values/dimens.xml
@@ -188,5 +188,8 @@
     <dimen name="dimen_1670px">1670px</dimen>
     <dimen name="dimen_375px">375px</dimen>
     <dimen name="dimen_205px">205px</dimen>
+    <dimen name="dimen_385px">385px</dimen>
+    <dimen name="dimen_256px">256px</dimen>
+    <dimen name="dimen_470px">470px</dimen>
 
 </resources>
