--- a/fanqu/src/main/res/values/colors.xml
+++ b/fanqu/src/main/res/values/colors.xml
@@ -90,6 +90,7 @@
     <color name="color_353535">#353535</color>
     <color name="color_F35757">#F35757</color>
     <color name="color_DBDBDB">#DBDBDB</color>
+    <color name="color_00a752">#00a752</color>
 
 
 </resources>
