年前最后一次提交

--- a/fanqu/src/main/res/values/styles.xml
+++ b/fanqu/src/main/res/values/styles.xml
@@ -93,5 +93,14 @@
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">16sp</item>
     </style>
+    <!--支付前选择套餐Dialog-->
+    <style name="select_setmeal_dialog">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
+        <item name="android:windowNoTitle">true</item><!--:是否显示title-->
+        <item name="android:backgroundDimEnabled">true</item><!--背景是否模糊-->
+
+    </style>
 
 </resources>
