第一次提交

--- a/fanqu/src/main/res/layout/select_set_meal_dialog_layout.xml
+++ b/fanqu/src/main/res/layout/select_set_meal_dialog_layout.xml
@@ -58,10 +58,74 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/dimen_40px">
+        android:layout_gravity="center"
+        android:layout_marginLeft="@dimen/dimen_40px"
+        android:layout_marginRight="@dimen/dimen_40px"
+        android:layout_marginTop="@dimen/dimen_40px"
+        android:orientation="horizontal">
 
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_10px"
+            android:layout_marginTop="@dimen/dimen_10px"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/a_set_meal_price"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_95px"
+                android:layout_marginRight="@dimen/dimen_15px"
+                android:background="@drawable/select_set_meal_selector"
+                android:button="@null"
+                android:checked="true"
+                android:paddingLeft="@dimen/dimen_10px"
+                android:paddingRight="@dimen/dimen_10px"
+                android:text="@string/a_set_meal_price"
+                android:textColor="@color/textGrayMiddle"
+                android:textSize="@dimen/dimen_48px" />
+
+            <RadioButton
+                android:id="@+id/b_set_meal_price"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_95px"
+                android:layout_marginLeft="@dimen/dimen_15px"
+                android:layout_marginRight="@dimen/dimen_15px"
+                android:background="@drawable/select_set_meal_selector"
+                android:button="@null"
+                android:paddingLeft="@dimen/dimen_10px"
+                android:paddingRight="@dimen/dimen_10px"
+                android:text="@string/b_set_meal_price"
+                android:textColor="@color/textGrayMiddle"
+                android:textSize="@dimen/dimen_48px" />
+
+            <RadioButton
+                android:id="@+id/c_set_meal_price"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_95px"
+                android:layout_marginLeft="@dimen/dimen_15px"
+                android:background="@drawable/select_set_meal_selector"
+                android:button="@null"
+                android:paddingLeft="@dimen/dimen_10px"
+                android:paddingRight="@dimen/dimen_10px"
+                android:text="@string/c_set_meal_price"
+                android:textColor="@color/textGrayMiddle"
+                android:textSize="@dimen/dimen_48px" />
+        </RadioGroup>
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimen_48px"
+        android:layout_marginTop="@dimen/dimen_40px"
+        android:text="@string/dinner_party_number_people"
+        android:textColor="@color/textGrayDeep" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/number_people"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_500px" />
 
 </LinearLayout>
