--- a/fanqu/src/main/res/layout/select_set_meal_dialog_layout.xml
+++ b/fanqu/src/main/res/layout/select_set_meal_dialog_layout.xml
@@ -122,10 +122,30 @@
         android:layout_marginTop="@dimen/dimen_40px"
         android:text="@string/dinner_party_number_people"
         android:textColor="@color/textGrayDeep" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/number_people_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimen_40px"
+        android:layout_marginRight="@dimen/dimen_40px"
+        android:overScrollMode="never"
+        android:scrollbars="none" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimen_48px"
+        android:layout_marginTop="@dimen/dimen_40px"
+        android:text="@string/dinner_party_time"
+        android:textColor="@color/textGrayDeep" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/dinner_time_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimen_40px"
+        android:layout_marginRight="@dimen/dimen_40px"
         android:overScrollMode="never"
         android:scrollbars="none" />
 </LinearLayout>
