--- a/fanqu/src/main/res/layout/dinner_time_recyclerview_item_layout.xml
+++ b/fanqu/src/main/res/layout/dinner_time_recyclerview_item_layout.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/number_people_layout"
+    android:id="@+id/time_layout"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginLeft="@dimen/dimen_80px"
     android:layout_marginRight="@dimen/dimen_80px"
+
     android:layout_marginTop="@dimen/dimen_40px"
     android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/number_people"
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dimen_95px"
         android:layout_gravity="center"
