--- a/fanqu/src/main/res/layout/select_set_meal_dialog_layout.xml
+++ b/fanqu/src/main/res/layout/select_set_meal_dialog_layout.xml
@@ -65,6 +65,7 @@
         android:orientation="horizontal">
 
         <RadioGroup
+            android:id="@+id/meal_price_radiogroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dimen_10px"
@@ -78,7 +79,6 @@
                 android:layout_marginRight="@dimen/dimen_15px"
                 android:background="@drawable/select_set_meal_selector"
                 android:button="@null"
-                android:checked="true"
                 android:paddingLeft="@dimen/dimen_10px"
                 android:paddingRight="@dimen/dimen_10px"
                 android:text="@string/a_set_meal_price"
@@ -148,4 +148,85 @@
         android:layout_marginRight="@dimen/dimen_40px"
         android:overScrollMode="never"
         android:scrollbars="none" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimen_48px"
+        android:layout_marginTop="@dimen/dimen_40px"
+        android:text="@string/meal_time"
+        android:textColor="@color/textGrayDeep" />
+
+    <RadioGroup
+        android:id="@+id/have_dinner_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dimen_40px"
+        android:layout_marginLeft="@dimen/dimen_40px"
+        android:layout_marginTop="@dimen/dimen_40px"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/lunch_time"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_95px"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/dimen_40px"
+            android:background="@drawable/select_set_meal_selector"
+            android:button="@null"
+            android:gravity="center"
+            android:paddingLeft="@dimen/dimen_15px"
+            android:paddingRight="@dimen/dimen_15px"
+            android:text="@string/lunch_time"
+            android:textColor="@color/textGrayMiddle"
+            android:textSize="@dimen/dimen_48px" />
+
+        <RadioButton
+            android:id="@+id/dinner_time"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_95px"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/dimen_40px"
+            android:background="@drawable/select_set_meal_selector"
+            android:button="@null"
+            android:gravity="center"
+            android:paddingLeft="@dimen/dimen_15px"
+            android:paddingRight="@dimen/dimen_15px"
+            android:text="@string/dinner_time"
+            android:textColor="@color/textGrayMiddle"
+            android:textSize="@dimen/dimen_48px" />
+    </RadioGroup>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_marginBottom="@dimen/dimen_40px"
+        android:gravity="bottom"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="center_horizontal"
+
+            android:text="@string/select_set_meal_tips"
+            android:textColor="@color/textGrayMiddle"
+            android:textSize="@dimen/dimen_48px" />
+
+        <TextView
+            android:id="@+id/ensure"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_148px"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="@dimen/dimen_40px"
+            android:background="@drawable/orders_confirmation_select"
+            android:clickable="true"
+            android:contentDescription="立即充值"
+            android:gravity="center"
+            android:text="@string/ok"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_60px" />
+    </LinearLayout>
 </LinearLayout>
