--- a/fanqu/src/main/res/layout/fragment_login_layout.xml
+++ b/fanqu/src/main/res/layout/fragment_login_layout.xml
@@ -5,30 +5,43 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/login_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:orientation="vertical">
+        android:layout_height="@dimen/dimen_180px">
 
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/phone_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_180px"
-            android:background="@null"
-            android:drawableLeft="@mipmap/ic_phone_username"
+            android:layout_height="match_parent"
+            android:background="@drawable/edit_text_rect_border"
+            android:drawableLeft="@mipmap/ic_password"
             android:drawablePadding="@dimen/dimen_13px"
             android:hint="@string/prompt_phone"
-            android:inputType="number"
-            android:maxLength="16"
-            android:maxLines="1"
+            android:imeOptions="actionDone"
+            android:inputType="phone"
+            android:maxLength="11"
             android:paddingLeft="@dimen/dimen_13px"
+            android:paddingRight="@dimen/dimen_23px"
             android:textColor="@color/textGrayDeep"
-            android:textSize="@dimen/dimen_54px" />
-        />
+            android:textSize="@dimen/dimen_54px"
+            android:maxLines="1" />
+
+        <ImageView
+            android:id="@+id/clear_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dimen_30px"
+            android:layout_toLeftOf="@id/phone_edit_text"
+            android:clickable="true"
+            android:contentDescription="@null"
+            android:padding="@dimen/dimen_8px"
+            android:visibility="gone"
+            android:src="@drawable/selector_clear_pass" />
+    </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -49,7 +62,7 @@
                 android:hint="@string/prompt_password"
                 android:imeOptions="actionDone"
                 android:inputType="text"
-                android:maxLength="12"
+                android:maxLength="20"
                 android:maxLines="1"
                 android:paddingLeft="@dimen/dimen_13px"
                 android:paddingRight="@dimen/dimen_23px"
@@ -73,24 +86,10 @@
 
                 />
 
-            <ImageView
-                android:id="@+id/show_pass"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/dimen_18px"
-                android:layout_toLeftOf="@id/forgin_pass"
-                android:clickable="true"
-                android:contentDescription="@null"
-                android:padding="@dimen/dimen_8px"
-                android:src="@drawable/selector_show_pass"
-                android:visibility="gone" />
 
         </RelativeLayout>
 
 
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
