--- a/fanqu/src/main/res/layout/activity_binding_mobile_phone_number_layout.xml
+++ b/fanqu/src/main/res/layout/activity_binding_mobile_phone_number_layout.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_registered_layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_forginpassword_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginTop="@dimen/dimen_70px"
+        android:background="@color/white"
+        android:gravity="right"
+        android:minWidth="?attr/actionBarSize"
+        app:titleTextAppearance="@style/Toolbar.TitleText">
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/binding_mobile_phone_number"
+            android:textColor="@color/layout_title"
+            android:textSize="@dimen/dimen_60px" />
+    </android.support.v7.widget.Toolbar>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,8 +53,6 @@
         />
 
 
-
-
     </RelativeLayout>
 
     <RelativeLayout
@@ -49,11 +70,11 @@
             android:imeOptions="actionDone"
             android:inputType="number"
             android:maxLength="6"
+            android:maxLines="1"
             android:paddingLeft="@dimen/dimen_13px"
             android:paddingRight="@dimen/dimen_23px"
             android:textColor="@color/textGrayDeep"
-            android:textSize="@dimen/dimen_54px"
-            android:maxLines="1" />
+            android:textSize="@dimen/dimen_54px" />
 
 
         <TextView
@@ -71,60 +92,20 @@
             android:textSize="@dimen/dimen_54px" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/complete_btn"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_180px">
+        android:layout_height="@dimen/dimen_150px"
+        android:layout_gravity="center"
+        android:layout_marginLeft="@dimen/dimen_40px"
+        android:layout_marginRight="@dimen/dimen_40px"
+        android:layout_marginTop="@dimen/dimen_40px"
+        android:background="@drawable/login_btn_bg"
+        android:clickable="true"
+        android:gravity="center"
+        android:text="@string/nextstep"
+        android:textColor="@color/white"
+        android:textSize="@dimen/dimen_60px" />
 
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/user_pass"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/edit_text_rect_border"
-            android:drawableLeft="@mipmap/ic_password"
-            android:drawablePadding="@dimen/dimen_13px"
-            android:hint="@string/set_password"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:maxLength="18"
-            android:paddingLeft="@dimen/dimen_13px"
-            android:paddingRight="@dimen/dimen_23px"
-            android:password="true"
-            android:singleLine="true"
-            android:textColor="@color/textGrayDeep"
-            android:textSize="@dimen/dimen_54px" />
-
-        <ImageView
-            android:id="@+id/clear_pass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/dimen_30px"
-            android:layout_toLeftOf="@id/user_pass"
-            android:clickable="true"
-            android:contentDescription="@null"
-            android:padding="@dimen/dimen_8px"
-            android:visibility="gone"
-            android:src="@drawable/selector_clear_pass" />
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/fragment_person_bg">
-
-        <TextView
-            android:id="@+id/complete_btn"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_150px"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/dimen_40px"
-            android:layout_marginRight="@dimen/dimen_40px"
-            android:background="@drawable/login_btn_bg"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="@string/register_account"
-            android:textColor="@color/white"
-            android:textSize="@dimen/dimen_60px" />
-    </LinearLayout>
 </LinearLayout>
+
