--- a/fanqu/src/main/res/layout/activity_recovered_password_layout.xml
+++ b/fanqu/src/main/res/layout/activity_recovered_password_layout.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_forginpassword_layout"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:layout_marginTop="@dimen/dimen_70px"
         android:background="@color/white"
         android:gravity="right"
         android:minWidth="?attr/actionBarSize"
@@ -30,6 +32,8 @@
         android:id="@+id/login_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -79,18 +83,17 @@
                 android:textSize="@dimen/dimen_50px" />
 
 
-
             <TextView
                 android:id="@+id/send_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:drawableLeft="@mipmap/ic_vertical_wire"
-                android:paddingLeft="@dimen/dimen_8px"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/dimen_22px"
                 android:clickable="true"
+                android:drawableLeft="@mipmap/ic_vertical_wire"
                 android:gravity="center"
+                android:paddingLeft="@dimen/dimen_8px"
                 android:text="@string/send_code"
                 android:textColor="@drawable/selector_login_text"
                 android:textSize="@dimen/dimen_50px" />
@@ -100,23 +103,23 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_200px">
 
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/user_pass"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/edit_text_rect_border"
-            android:drawableLeft="@mipmap/ic_password"
-            android:drawablePadding="@dimen/dimen_13px"
-            android:hint="@string/input_new_password"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:maxLength="12"
-            android:paddingLeft="@dimen/dimen_13px"
-            android:paddingRight="@dimen/dimen_23px"
-            android:password="true"
-            android:singleLine="true"
-            android:textColor="@color/textGrayDeep"
-            android:textSize="@dimen/dimen_50px" />
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/user_pass"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/edit_text_rect_border"
+                android:drawableLeft="@mipmap/ic_password"
+                android:drawablePadding="@dimen/dimen_13px"
+                android:hint="@string/input_new_password"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:maxLength="12"
+                android:paddingLeft="@dimen/dimen_13px"
+                android:paddingRight="@dimen/dimen_23px"
+                android:password="true"
+                android:singleLine="true"
+                android:textColor="@color/textGrayDeep"
+                android:textSize="@dimen/dimen_50px" />
 
             <ImageView
                 android:id="@+id/show_pass"
@@ -137,9 +140,9 @@
             android:layout_height="@dimen/dimen_150px"
             android:layout_marginTop="@dimen/dimen_50px"
             android:background="@drawable/login_btn_bg"
+            android:clickable="true"
             android:gravity="center"
             android:text="@string/complete"
-            android:clickable="true"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_50px" />
     </LinearLayout>
