--- a/fanqu/src/main/res/values/attrs.xml
+++ b/fanqu/src/main/res/values/attrs.xml
@@ -212,20 +212,24 @@
     <!-- 自定义星星属性 -->
     <declare-styleable name="star">
         //星星数量
-        <attr format="integer" name="starsNum"></attr>
+        <attr name="starsNum" format="integer"></attr>
         //星星宽度
-        <attr format="dimension" name="starWidth"></attr>
+        <attr name="starWidth" format="dimension"></attr>
         //星星高度
-        <attr format="dimension" name="starHeight"></attr>
+        <attr name="starHeight" format="dimension"></attr>
         //星星间距
-        <attr format="dimension" name="starDistance"></attr>
+        <attr name="starDistance" format="dimension"></attr>
         //星星背景
-        <attr format="reference" name="starBackground"></attr>
+        <attr name="starBackground" format="reference"></attr>
         //星星变化背景
-        <attr format="reference" name="starDrawBackground"></attr>
+        <attr name="starDrawBackground" format="reference"></attr>
         //控件是否可以点击
-        <attr format="boolean" name="starClickable"></attr>
+        <attr name="starClickable" format="boolean"></attr>
 
+    </declare-styleable>
+    <!-- 圆弧进度条 自定义-->
+    <declare-styleable name="CircularProgress">
+        <attr name="borderWidth" format="dimension" />
     </declare-styleable>
     <attr name="textColor" format="color|reference" />
     <attr name="textSize" format="dimension|reference" />
