--- a/fanqu/src/main/res/layout/fragment_home_layout.xml
+++ b/fanqu/src/main/res/layout/fragment_home_layout.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.fanqu.main.widget.CircularProgress
+        android:id="@+id/CircularProgress"
+        android:layout_width="@dimen/dimen_150px"
+        android:layout_height="@dimen/dimen_150px"
+        android:layout_gravity="center"
+        app:borderWidth="@dimen/dimen_10px"></com.fanqu.main.widget.CircularProgress>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/kitchen_details_app_bar_layout"
@@ -69,8 +75,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
-                    android:drawableRight="@mipmap/ic_down_arrows_white"
                     android:drawablePadding="@dimen/dimen_10px"
+                    android:drawableRight="@mipmap/ic_down_arrows_white"
                     android:gravity="center"
                     android:padding="@dimen/dimen_10px"
                     android:paddingLeft="@dimen/dimen_20px"
@@ -114,11 +120,14 @@
 
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/NestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
         <LinearLayout
+            android:id="@+id/home_page_content_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/fragment_home_bg"
@@ -292,17 +301,19 @@
                 android:orientation="horizontal">
 
                 <RelativeLayout
+                    android:id="@+id/fragment_home_page_adv_1"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dimen_250px"
                     android:layout_marginRight="@dimen/dimen_10px"
                     android:layout_weight="1"
-                    android:background="@color/white">
+                    android:background="@drawable/fragment_person_mine_dinner_select"
+                    android:clickable="true">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/fragment_home_sentiment_coffee_image"
-                        android:layout_width="@dimen/dimen_180px"
-                        android:layout_height="@dimen/dimen_180px"
-                        android:layout_marginLeft="@dimen/dimen_20px"
+                        android:layout_width="@dimen/dimen_178px"
+                        android:layout_height="@dimen/dimen_178px"
+                        android:layout_marginLeft="@dimen/dimen_10px"
                         android:layout_marginTop="@dimen/dimen_20px"
                         android:src="@mipmap/ic_sentiment_coffee" />
 
@@ -310,7 +321,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="@dimen/dimen_20px"
+                        android:layout_marginLeft="@dimen/dimen_10px"
                         android:layout_toRightOf="@+id/fragment_home_sentiment_coffee_image"
                         android:gravity="center|left"
                         android:orientation="vertical">
@@ -323,31 +334,34 @@
                             android:text="@string/fragment_home_sentiment_coffee"
                             android:textColor="@color/black"
 
-                            android:textSize="@dimen/dimen_50px" />
+                            android:textSize="@dimen/dimen_48px" />
 
                         <TextView
                             android:id="@+id/fragment_home_sentiment_coffee_content"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:maxLines="2"
                             android:text="@string/fragment_home_sentiment_coffee_content"
                             android:textColor="@color/coffee_content_color"
-                            android:textSize="@dimen/dimen_40px" />
+                            android:textSize="@dimen/dimen_37px" />
                     </LinearLayout>
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/fragment_home_page_adv_2"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dimen_250px"
                     android:layout_marginLeft="@dimen/dimen_10px"
                     android:layout_weight="1"
-                    android:background="@color/white"
+                    android:background="@drawable/fragment_person_mine_dinner_select"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/fragment_home_evaluating_ambassador_image"
-                        android:layout_width="@dimen/dimen_180px"
-                        android:layout_height="@dimen/dimen_180px"
-                        android:layout_marginLeft="@dimen/dimen_20px"
+                        android:layout_width="@dimen/dimen_178px"
+                        android:layout_height="@dimen/dimen_178px"
+                        android:layout_marginLeft="@dimen/dimen_10px"
                         android:layout_marginTop="@dimen/dimen_20px"
                         android:src="@mipmap/ic_evaluating_ambassador" />
 
@@ -355,7 +369,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="@dimen/dimen_20px"
+                        android:layout_marginLeft="@dimen/dimen_10px"
                         android:layout_toRightOf="@+id/fragment_home_evaluating_ambassador_image"
                         android:gravity="center|left"
                         android:orientation="vertical">
@@ -367,15 +381,16 @@
                             android:layout_height="wrap_content"
                             android:text="@string/fragment_home_evaluating_ambassador"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/dimen_50px" />
+                            android:textSize="@dimen/dimen_48px" />
 
                         <TextView
                             android:id="@+id/fragment_home_evaluating_ambassador_content"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:maxLines="2"
                             android:text="@string/fragment_home_evaluating_ambassador_content"
                             android:textColor="@color/coffee_content_color"
-                            android:textSize="@dimen/dimen_40px" />
+                            android:textSize="@dimen/dimen_37px" />
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
@@ -383,30 +398,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_10px"
                 android:background="@color/fragment_home_bg"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/dimen_10px">
 
                 <RelativeLayout
+                    android:id="@+id/fragment_home_page_adv_3"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dimen_250px"
                     android:layout_marginRight="@dimen/dimen_10px"
                     android:layout_weight="1"
-                    android:background="@color/white">
+                    android:background="@drawable/fragment_person_mine_dinner_select"
+                    android:clickable="true">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/fragment_home_major_suit_low_price_image"
-                        android:layout_width="@dimen/dimen_180px"
-                        android:layout_height="@dimen/dimen_180px"
-                        android:layout_marginLeft="@dimen/dimen_20px"
+                        android:layout_width="@dimen/dimen_178px"
+                        android:layout_height="@dimen/dimen_178px"
+                        android:layout_marginLeft="@dimen/dimen_10px"
                         android:layout_marginTop="@dimen/dimen_20px"
                         android:src="@mipmap/ic_major_suit_low_price" />
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="@dimen/dimen_20px"
+                        android:layout_marginLeft="@dimen/dimen_10px"
                         android:layout_toRightOf="@+id/fragment_home_major_suit_low_price_image"
                         android:gravity="center"
                         android:orientation="vertical">
@@ -416,33 +433,40 @@
                             android:id="@+id/fragment_home_major_suit_low_price_tile"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
                             android:text="@string/major_suit_low_price"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/dimen_50px" />
+                            android:textSize="@dimen/dimen_48px" />
 
                         <TextView
                             android:id="@+id/fragment_home_major_suit_low_price_content"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/fragment_home_major_suit_low_price_content"
+                            android:layout_below="@id/fragment_home_major_suit_low_price_tile"
+                            android:maxLines="2"
+                            android:text="带你走进这些温柔的店里 完美的一天才要刚刚开始"
                             android:textColor="@color/coffee_content_color"
-                            android:textSize="@dimen/dimen_40px" />
-                    </LinearLayout>
+                            android:textSize="@dimen/dimen_37px" />
+                    </RelativeLayout>
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/fragment_home_page_adv_4"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dimen_250px"
                     android:layout_marginLeft="@dimen/dimen_10px"
                     android:layout_weight="1"
-                    android:background="@color/white"
+                    android:background="@drawable/fragment_person_mine_dinner_select"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/fragment_home_invite_politeness_image"
-                        android:layout_width="@dimen/dimen_180px"
-                        android:layout_height="@dimen/dimen_180px"
-                        android:layout_marginLeft="@dimen/dimen_20px"
+                        android:layout_width="@dimen/dimen_178px"
+                        android:layout_height="@dimen/dimen_178px"
+                        android:layout_marginLeft="@dimen/dimen_10px"
                         android:layout_marginTop="@dimen/dimen_20px"
                         android:src="@mipmap/ic_invite_politeness_image" />
 
@@ -450,7 +474,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="@dimen/dimen_20px"
+                        android:layout_marginLeft="@dimen/dimen_10px"
                         android:layout_toRightOf="@+id/fragment_home_invite_politeness_image"
                         android:gravity="center|left"
                         android:orientation="vertical">
@@ -462,31 +486,36 @@
                             android:layout_height="wrap_content"
                             android:text="@string/invite_politeness"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/dimen_50px" />
+                            android:textSize="@dimen/dimen_48px" />
 
                         <TextView
                             android:id="@+id/fragment_home_invite_politeness_content"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:maxLines="2"
                             android:text="@string/invite_politeness_content"
                             android:textColor="@color/coffee_content_color"
-                            android:textSize="@dimen/dimen_40px" />
+                            android:textSize="@dimen/dimen_37px" />
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_500px"
-                android:layout_marginTop="@dimen/dimen_40px"
-                android:background="@mipmap/ic_major_suit_low_price"
-                android:contentDescription="广告图片"
-                android:gravity="center|left"
-                android:lineSpacingExtra="@dimen/dimen_12px"
-                android:paddingLeft="@dimen/dimen_100px"
-                android:text="@string/advertisement"
-                android:textColor="@color/white"
-                android:textSize="@dimen/dimen_60px" />
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+
+                <!--   banner_numberIndicatorBackground数字指示器背景  -->
+                <cn.bingoogolapple.bgabanner.BGABanner
+                    android:id="@+id/banner_slider"
+                    style="@style/BannerDefaultStyle"
+                    android:contentDescription="渐变"
+                    app:banner_transitionEffect="defaultEffect" />
+
+            </RelativeLayout>
 
 
             <LinearLayout
